wallpapers/image: fix symlink not being found by ImageFinder

Finder uses findSymlinkTarget to find the target file/dir to avoid
duplicates, but it forgot to use the target path when collected, so
symlinks would still be filtered out. ImageFinder and PackageFinder
should not ignore symlinks and this fixes the wrong behavior by using
target path from findSymlinkTarget.

BUG: 460287
FIXED-IN: 5.26.1
(cherry picked from commit 28f362dfce3dd065fffcad0eedf7bb87f5235fea)